<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Расписание</string>
    <string name="action_settings">Settings</string>
    <string name="text_Task">Предмет</string>
    <string name="text_Teacher">Преподаватель</string>
    <string name="text_Room">Аудитория</string>
    <string name="action_calendar">Календарь</string>
    <string name="action_list">Список групп</string>
    <color name="gray">#888888</color>
    <string name="text_Auditory">Аудитория</string>
    <string name="text_TeacherSchedule">Расписание препод.</string>
    <string name="text_ClassSchedule">Расписание группы</string>
    <string name="action_refresh">Обновить</string>
    <string name="text_ScheduleList">Избранные</string>
    <string name="text_addSchedule">Добавить расписание</string>
    <string name="text_Group">Учебная группа</string>
    <string name="text_ChooseScheduleType">Выберите тип расписания</string>
    <string name="text_DeleteSchedule">Удаление расписания</string>
    <string name="text_AcceptDeletingShedule">Вы действительно хотите удалить это расписание?</string>
</resources>
