<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/taskListElement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:clickable="true" >

        <RelativeLayout
            android:id="@+id/timeLayout"
            android:layout_width="80dp"
            android:layout_height="80dp" >

            <TextView
                android:id="@+id/textLetterIcon"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/textTaskStartTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="8:00"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textTaskEndTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:gravity="center_horizontal"
                android:text="10:00"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/text_Task"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textTeacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_Teacher"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_Room"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/taskActions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#999999"
        android:divider="@drawable/separator"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:visibility="gone" 
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/taskActionPlace"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/taskActionPlaceImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="taskActionPlaceImage"
                android:scaleType="center"
                android:src="@drawable/ic_place" />

            <TextView
                android:id="@+id/taskActionPlaceText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_Auditory"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/taskActionSchedule"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal" 
            android:contentDescription="taskActionSchedule">

            <ImageView
                android:id="@+id/taskActionScheduleImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="center"
                android:src="@drawable/ic_calendar" 
                android:contentDescription="taskActionScheduleImage"/>

            <TextView
                android:id="@+id/taskActionScheduleText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_TeacherSchedule"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
